--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -1,7 +1,7 @@
 sources:
-  - name: jaffle_shop
-    database: dbt_testing
-    schema: jaffle_shop
+  - name: dbt_testing
+    database: dbt-cloud-test-435803
+    schema: dbt_testing
     tables:
       - name: jaffle_shop_customers
       - name: jaffle_shop_orders
