--- a/models/staging/stripe/src_stripe.yaml
+++ b/models/staging/stripe/src_stripe.yaml
@@ -1,11 +1,12 @@
 version: 2
 
 sources:
-  - name: dbt_testing
+  - name: stripe
     database: dbt-cloud-test-435803
     schema: dbt_testing
     tables:
-      - name: stripe_payment
+      - name: payment
+        identifier: stripe_payment
         loaded_at_field: _batched_at
         freshness:
           warn_after: {count: 12, period: hour}
