--- a/models/staging/stripe/_sources.yml
+++ b/models/staging/stripe/_sources.yml
@@ -3,10 +3,10 @@ version: 2
 sources:
   - name: stripe
     database: dbt-cloud-test-435803
-    schema: dbt_testing
+    schema: stripes
     tables:
       - name: payment
-        identifier: stripe_payment
+        identifier: payment
         loaded_at_field: _batched_at
         freshness:
           warn_after: {count: 12, period: hour}
